--- a/lendoor/package.json
+++ b/lendoor/package.json
@@ -15,6 +15,7 @@
     "@graphprotocol/graph-ts": "0.37.0"
   },
   "devDependencies": {
-    "matchstick-as": "0.6.0"
+    "matchstick-as": "0.6.0",
+    "undici": "^7.16.0"
   }
 }
